--- a/css/fontello_min.css
+++ b/css/fontello_min.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('http://static.tumblr.com/nsfbo6y/KMJndonpl/fontello.eot?90009701');
-  src: url('http://static.tumblr.com/nsfbo6y/KMJndonpl/fontello.eot?90009701#iefix') format('embedded-opentype'),
-       url('http://static.tumblr.com/nsfbo6y/M3Andonqf/fontello.woff?90009701') format('woff'),
-       url('http://static.tumblr.com/nsfbo6y/aiFndonq5/fontello.ttf?90009701') format('truetype'),
-       url('http://static.tumblr.com/nsfbo6y/vY2ndonpu/fontello.svg?90009701#fontello') format('svg');
+  src: url('https://github.com/crypt0nyt3/Fonts/blob/master/font/fontello.eot');
+  src: url('https://github.com/crypt0nyt3/Fonts/blob/master/font/fontello.eot?#iefix') format('embedded-opentype'),
+       url('https://github.com/crypt0nyt3/Fonts/blob/master/font/fontello.woff') format('woff'),
+       url('https://github.com/crypt0nyt3/Fonts/blob/master/font/fontello.ttf') format('truetype'),
+       url('https://github.com/crypt0nyt3/Fonts/blob/master/font/fontello.svg?#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
